fixing alignment issues in mobile homepage

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 
 body {
+  margin-top:120px;
   background-color: #fff7ec;
   overflow-x: hidden; /*hides content that overflows horizontal*/
 
@@ -98,11 +99,9 @@ h2 {
 
 /* HERO SECTION*/
 .hero {
-  margin-top: 220px;
   text-align: center;
   position: relative;
   padding: 4rem 1rem;
-  min-height: 90vh;
 }
 
 .hero img:first-of-type {
@@ -150,7 +149,7 @@ h2 {
 
 /*ABOUT SECTION*/
 .about-section {
-  padding: 5rem 1rem 4rem;
+  padding: 2rem 1rem 4rem;
   text-align: center;
 }
 
@@ -199,7 +198,6 @@ h2 {
 }
 
 .base-selection h1 {
-  margin-top: 100px;
   text-transform: uppercase;
   margin-bottom: 2rem;
 }
@@ -404,14 +402,14 @@ h2 {
   /* HERO SECTION*/
   .hero {
     padding: 1rem;
-    margin-top: 220px;
+    margin-top: 150px;
 
   }
 
   .hero img:first-of-type {
     content: url('Home-page/Hero_section/hero-imgs-mobile.svg');
     max-width: 100%;
-    margin-top: 0;
+    margin-top: 170px;
   }
 
   body {
